--- a/cb/discoveryc.html
+++ b/cb/discoveryc.html
@@ -779,7 +779,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           mobileVideoContainer.innerHTML = "";
 
           const videoId = "jxe0c467oc";
-          const mobileVideoId = "xm0e56hj3l";
+          const mobileVideoId = "ydjvvsj5gm";
 
           const wistiaDiv = document.createElement("div");
           const mobileWistiaDiv = document.createElement("div");
