--- a/cb/discoveryb.html
+++ b/cb/discoveryb.html
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://getpeg.pay.clickbank.net/?cbitems=9&cbfid=61950&pg=vdrd&vtid=vidb">
+                href="https://getpeg.pay.clickbank.net/?cbitems=1&cbfid=61950&pg=vdrd&vtid=vidb">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
@@ -779,7 +779,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           mobileVideoContainer.innerHTML = "";
 
           const videoId = "jxe0c467oc";
-          const mobileVideoId = "ydjvvsj5gm";
+          const mobileVideoId = "xm0e56hj3l";
 
           const wistiaDiv = document.createElement("div");
           const mobileWistiaDiv = document.createElement("div");
