--- a/cb/pbs.html
+++ b/cb/pbs.html
@@ -433,7 +433,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
               <h1>
                 Unlock Your Copy Of
                 <br>
-                Pegasus
+                Push Button System
               </h1>
             </div>
 
@@ -446,7 +446,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           </div>
 
           <div class="mx-5 mt-4">
-            <img src="/images/main-product.png" class="lg:h-auto lg:w-[870px]" alt="Product Image">
+            <img src="/images/main-product.webp" class="lg:h-auto lg:w-[870px]" alt="Product Image">
           </div>
 
           <div class="">
@@ -500,7 +500,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
                 <div class="text-center font-serif text-2xl font-bold">Today Just For</div>
                 <div
                   class="-mt-3 text-center font-serif text-[54px] font-bold text-blue-950 lg:text-[71px]">
-                  $37
+                  $67
                 </div>
               </div>
               <div>
@@ -778,8 +778,8 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           videoContainer.innerHTML = "";
           mobileVideoContainer.innerHTML = "";
 
-          const videoId = "jxe0c467oc";
-          const mobileVideoId = "ydjvvsj5gm";
+          const videoId = "dc4i5b2154";
+          const mobileVideoId = "sj9enp8jya";
 
           const wistiaDiv = document.createElement("div");
           const mobileWistiaDiv = document.createElement("div");
