--- a/cb/pbs.html
+++ b/cb/pbs.html
@@ -39,7 +39,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-<title>Pegasus</title>
+<title>Push Button System</title>
   <link rel="preconnect" href="https://fast.wistia.com/" crossorigin>
   <link rel="preconnect" href="https://embed-cloudfront.wistia.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
