--- a/cb/pbs-b.html
+++ b/cb/pbs-b.html
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://getpeg.pay.clickbank.net/?cbitems=9&cbfid=61950&pg=vdrd&vtid=vidc">
+                href="https://go.dailygrowthpath.com/click">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
@@ -778,8 +778,8 @@ Makes Me <span class="text-header-red">$528/Day"</span>
           videoContainer.innerHTML = "";
           mobileVideoContainer.innerHTML = "";
 
-          const videoId = "dc4i5b2154";
-          const mobileVideoId = "sj9enp8jya";
+          const videoId = "2hkni2ixmw";
+          const mobileVideoId = "1a1ckod8as";
 
           const wistiaDiv = document.createElement("div");
           const mobileWistiaDiv = document.createElement("div");
