--- a/cb/pbs-c.html
+++ b/cb/pbs-c.html
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://getpeg.pay.clickbank.net/?cbitems=9&cbfid=61950&pg=vdrd&vtid=vidc">
+                href="https://go.myaiwealthcreation.com/click">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
