--- a/cb/pbs-a.html
+++ b/cb/pbs-a.html
@@ -509,7 +509,7 @@ Makes Me <span class="text-header-red">$528/Day"</span>
             </div>
             <div class="flex items-center justify-center px-2 lg:px-0">
               <a
-                href="https://go.dailygrowthcorner.com/click">
+                href="https://go.dailygrowthpath.com/click">
                 <img alt="order now button" src="/images/order-now-button.webp">
               </a>
             </div>
